--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,21 +8,26 @@
   "private": false,
   "main_changeset": true,
   "exports": {
-    ".": "./Index.svelte",
-    "./example": "./Example.svelte",
+    ".": {
+      "gradio": "./Index.svelte"
+    },
+    "./example": {
+      "gradio": "./Example.svelte"
+    },
     "./package.json": "./package.json"
   },
   "devDependencies": {
-    "@gradio/preview": "0.9.0"
+    "@gradio/preview": "0.12.0"
   },
   "dependencies": {
-    "@gradio/atoms": "0.2.0",
-    "@gradio/button": "0.2.3",
-    "@gradio/client": "0.20.1",
-    "@gradio/icons": "0.2.0",
-    "@gradio/statustracker": "^0.7.5",
-    "@gradio/upload": "^0.12.3",
-    "@gradio/utils": "^0.6.0",
+    "@gradio/atoms": "0.9.0",
+    "@gradio/button": "0.3.0",
+    "@gradio/client": "1.6.0",
+    "@gradio/icons": "0.8.0",
+    "@gradio/markdown": "^0.10.0",
+    "@gradio/statustracker": "^0.8.0",
+    "@gradio/upload": "^0.13.0",
+    "@gradio/utils": "^0.7.0",
     "pdfjs-dist": "4.2.67"
   }
 }
